--- a/styles/header.css
+++ b/styles/header.css
@@ -1,163 +1,141 @@
-
 .app__header {
-    align-items: center;
-    background-image: url('../assets/images/Fortuna.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    min-height: 100vh;
-    justify-content: center;
-    margin-top: -4rem;
-    margin-bottom: 3.5rem;
-    overflow: hidden;
-    padding: 6rem 2rem 4rem;
-    position: relative;
-    width: 100%;
+  align-items: center;
+  background-image: url("../assets/images/Fortuna.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  margin-top: -4rem;
+  margin-bottom: 3.5rem;
+  overflow: hidden;
+  padding: 6rem 2rem 4rem;
+  position: relative;
+  width: 100%;
 }
 
 .app__header-overlay {
-    background-color: rgba(0,0,0,0.65);
-    padding: 6rem 2rem 4rem;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-    z-index: 1;
+  background-color: rgba(0, 0, 0, 0.65);
+  padding: 6rem 2rem 4rem;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .app__header-container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    z-index: 2;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  z-index: 2;
 }
 
 .app__header-row {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
 
-.app__header-row .app__header-col {
-    flex: .5;
-}
-
-.app__header-col.-left, .app__header-col.-right {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.app__header-col .app__header-img {
-    border-radius: 1rem;
-    overflow: hidden;
-    width: 447px;
-}
-
-.app__header-img img {
-    width: 100%;
-    height: auto;
-}
-
-
-.app__header-text {
-    flex: 1;
+.app__header-row .app__header-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app__header-text h2 {
-    color: #fff;
-    font-size: 3.5rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-    font-family: var(--title);
+  color: #fff;
+  font-size: 3.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  font-family: var(--title);
 }
 .app__header-text p {
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 500;
-    margin-bottom: 2rem;
-    font-family: var(--subtitle);
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+  font-family: var(--subtitle);
 }
 
 .app__header-btns {
-    gap: 1rem;
-    display: flex;
-
+  gap: 1rem;
+  display: flex;
 }
 
 .app__header-text a {
-    background-color: #fff;
-    border: 1px solid #293040;
-    border: none;
-    border-radius: 2rem;
-    color: #000000;
-    font-size: 1.1rem;
-    font-weight: 600;
-    font-family: var(--title);
-    outline: none;
-    padding: 1rem 2rem;
-    transition: all 250ms ease-in;
+  background-color: #fff;
+  border: 1px solid #293040;
+  border: none;
+  border-radius: 2rem;
+  color: #000000;
+  font-size: 1.1rem;
+  font-weight: 600;
+  font-family: var(--title);
+  outline: none;
+  padding: 1rem 2rem;
+  transition: all 250ms ease-in;
 }
 
 .app__header-text a:hover {
-    background-color: #0C0813;
-    color: #fff;
+  background-color: #0c0813;
+  color: #fff;
 }
 
 .app__header-text a.app__header-btn_alt {
-    background-color: #0C0813;
-    color: #fff;
+  background-color: #0c0813;
+  color: #fff;
 }
 
 .app__header-text a.app__header-btn_alt:hover {
-    background-color: #fff;
-    color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
 @media screen and (max-width: 956px) {
-    .app__header {
-        min-height: max-content;
-        padding: 10rem 2rem 7rem;
-    }
+  .app__header {
+    min-height: max-content;
+    padding: 10rem 2rem 7rem;
+  }
 
-    .app__header-col.-left {
-        display: none;
-    }
+  .app__header-col.-left {
+    display: none;
+  }
 
-    .app__header-col.-right {
-        flex: 1;
-    }
+  .app__header-col.-right {
+    flex: 1;
+  }
 
-    .app__header-text {
-        width: 600px;
-        margin: auto;
-    }
+  .app__header-text {
+    width: 600px;
+    margin: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .app__header-text {
-        width: 100%;
-    }
+  .app__header-text {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 560px) {
-    .app__header-text h2 {
-        font-size: 3.8rem;
-    }
-    .app__header-text p {
-        font-size: .825rem;
-    }
+  .app__header-text h2 {
+    font-size: 3.8rem;
+  }
+  .app__header-text p {
+    font-size: 0.825rem;
+  }
 
-    .app__header-btns a {
-        width: max-content;
-    }
+  .app__header-btns a {
+    width: max-content;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .app__header-btns {
-        flex-direction: column;
-    }
+  .app__header-btns {
+    flex-direction: column;
+  }
 }
