--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -108,7 +108,7 @@
   background-color: #fff;
   color: #000;
   font-size: 0.875rem;
-  padding: 0.5rem 1rem;
+  height: 40px;
   transition: all 300ms ease-in;
 }
 
