--- a/styles/divine-draw.css
+++ b/styles/divine-draw.css
@@ -1,414 +1,455 @@
 .app__divine-draw__header {
-    align-items: center;
-    background-image: url('../assets/images/Fortuna.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    margin-top: -4rem;
-    margin-bottom: 3.5rem;
-    min-height: 100vh;
-    padding: 2rem 0;
-    position: relative;
-    text-align: center;
+  align-items: center;
+  background-image: url("../assets/images/Fortuna.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  margin-top: -4rem;
+  margin-bottom: 3.5rem;
+  min-height: 100vh;
+  padding: 2rem 0;
+  position: relative;
+  text-align: center;
 }
 
 .app__divine-draw_overlay {
-    background-color: rgba(0,0,0,0.65);
-    padding: 6rem 2rem 4rem;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-    z-index: 1;
+  background-color: rgba(0, 0, 0, 0.65);
+  padding: 6rem 2rem 4rem;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .app__divine-draw__header-container {
-    padding: 4rem 0;
-    position: relative;
-    width: 100%;
-    z-index: 2;
+  padding: 4rem 0;
+  position: relative;
+  width: 100%;
+  z-index: 2;
 }
 
 .app__divine-draw__header h4 {
-    font-family: var(--title);
-    font-size: 2rem;
+  font-family: var(--title);
+  font-size: 2rem;
 }
 
 .app__divine-draw__header h2 {
-    font-family: var(--subtitle);
-    font-size: 3rem;
+  font-family: var(--subtitle);
+  font-size: 3rem;
 }
 
 .app__divine-draw__header button {
-    background-color: #fff;
-    border: none;
-    border-radius: 2rem;
-    color: #293040;
-    font-family: var(--subtitle);
-    font-size: 1rem;
-    font-weight: 400;
-    padding: .625rem 2rem;
+  background-color: #fff;
+  border: none;
+  border-radius: 2rem;
+  color: #293040;
+  font-family: var(--subtitle);
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.625rem 2rem;
 }
 
 .app__divine-draw__header button:disabled {
-    background-color: #e9eaeb;
-    color: #bdc2c4;
-    cursor:not-allowed;
+  background-color: #e9eaeb;
+  color: #bdc2c4;
+  cursor: not-allowed;
 }
 
 .countdown {
-    align-items: center;
-    display: flex;
-    gap: 1.5rem;
-    justify-content: center;
-    margin: 1rem 0 2rem;
+  align-items: center;
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  margin: 1rem 0 2rem;
 }
 
 .time div {
-    align-items: center;
-    background-color: #293040;
-    border-radius: .4rem;
-    box-shadow: 0px 1px 2px rgba(255, 255, 255, .6);
-    display: flex;
-    height: 5rem;
-    justify-content: center;
-    margin-bottom: .5rem;
-    padding: .5rem;
-    width: 5rem;
+  align-items: center;
+  background-color: #293040;
+  border-radius: 0.4rem;
+  box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
+  display: flex;
+  height: 5rem;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+  width: 5rem;
 }
 
 .countdown h2 {
-    font-family: var(--subtitle);
-    font-size: 2rem;
-    font-weight: 500;
+  font-family: var(--subtitle);
+  font-size: 2rem;
+  font-weight: 500;
 }
 
 .countdown p {
-    font-family: var(--subtitle);
-    font-size: .875rem;
-    font-weight: 400;
-    text-align: center;
+  font-family: var(--subtitle);
+  font-size: 0.875rem;
+  font-weight: 400;
+  text-align: center;
 }
 
 .app__divine-draw__scroll {
-    animation: bounce linear 3s infinite;
-    position: absolute;
-    bottom: 40px;
-    left: 60px;
-    z-index: 9;
-    
-    align-items: center;
-    background-color: #293040;
-    border-radius: 50%;
-    display: flex;
-    height: 3.5rem;
-    justify-content: center;
-    width: 3.5rem;
+  animation: bounce linear 3s infinite;
+  position: absolute;
+  bottom: 40px;
+  left: 60px;
+  z-index: 9;
+
+  align-items: center;
+  background-color: #293040;
+  border-radius: 50%;
+  display: flex;
+  height: 3.5rem;
+  justify-content: center;
+  width: 3.5rem;
 }
 
 /* history */
 .app__divine-draw__history {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2rem;
-    padding: 4rem 0;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  padding: 4rem 0;
+}
+
+.app__divine-draw__history .toggle__btns {
+  overflow: hidden;
+  border-radius: 4px;
+  display: flex;
+  margin-bottom: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.app__divine-draw__history .toggle__btn {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 0.875rem;
+  font-family: var(--subtitle);
+  font-weight: 600;
+  min-width: 180px;
+  opacity: 0.25;
+  outline: none;
+  padding: 12px;
+  transition: all 0.2s ease-in-out;
+}
+
+.app__divine-draw__history .toggle__btn.active {
+  opacity: 1;
+}
+
+.app__divine-draw__history .history__table {
+  background-color: #293040;
+  width: 100%;
+}
+
+.history__table table {
+  font-family: var(--subtitle);
+  width: 100%;
+}
+
+.history__table table th {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 0.5rem;
 }
 
 .app__divine-draw__history-content .app__divine-draw__history-top {
-    margin-bottom: 4.5rem;
-    text-align: center;
+  margin-bottom: 4.5rem;
+  text-align: center;
 }
 
 .app__divine-draw__history-top h2 {
-    font-size: 2.5rem;
-    font-weight: 600;
-    font-family: var(--subtitle);
+  font-size: 2.5rem;
+  font-weight: 600;
+  font-family: var(--subtitle);
 }
 
-
 .app__divine-draw__history-content {
-    width: 100%;
+  width: 100%;
 }
 
 .app__divine-draw__history-container {
-    background-color: #293040;
-    box-shadow: 0px 1px 2px rgba(255, 255, 255, .6);
-    padding: 1rem;
-    width: 100%;
+  background-color: #293040;
+  box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
+  padding: 1rem;
+  width: 100%;
 }
 
 .ticket {
-    background-color: #293040;
-    border-radius: .4rem;
-    box-shadow: 0px 1px 2px rgba(255, 255, 255, .6);
-    margin: auto;
-    margin-top: -3rem;
-    padding: .5rem 1rem;
-    width: max-content;
+  background-color: #293040;
+  border-radius: 0.4rem;
+  box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
+  margin: auto;
+  margin-top: -3rem;
+  padding: 0.5rem 1rem;
+  width: max-content;
 }
 
 .ticket__balls {
-    align-items: center;
-    display: flex;
-    gap: .6rem;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 0.6rem;
+  justify-content: center;
 }
 
 .ticket p {
-    font-family: var(--subtitle);
-    font-size: .825rem;
-    font-weight: 400;
-    margin-bottom: .5rem;
-    text-align: center;
+  font-family: var(--subtitle);
+  font-size: 0.825rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+  text-align: center;
 }
 
 .ticket__balls h3 {
-    font-family: var(--subtitle);
-    font-size: 1.5rem;
-    font-weight: 600;
+  font-family: var(--subtitle);
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .ticket__balls .balls {
-    align-items: center;
-    border-radius: 50%;
-    display: flex;
-    height: 3rem;
-    justify-content: center;
-    width: 3rem;
+  align-items: center;
+  border-radius: 50%;
+  display: flex;
+  height: 3rem;
+  justify-content: center;
+  width: 3rem;
 }
 
 .ticket__balls .balls:first-child {
-    background-color: #D750B2;
+  background-color: #d750b2;
 }
-.balls:nth-child(n+1) {
-    background-color:  #A881FC;
+.balls:nth-child(n + 1) {
+  background-color: #a881fc;
 }
-.balls:nth-child(2n+1) {
-    background-color:  #1FC7D4;
+.balls:nth-child(2n + 1) {
+  background-color: #1fc7d4;
 }
-.balls:nth-child(3n+1) {
-    background-color: #31D0AA;
+.balls:nth-child(3n + 1) {
+  background-color: #31d0aa;
 }
-.balls:nth-child(4n+1) {
-    background-color: #93D45A;
+.balls:nth-child(4n + 1) {
+  background-color: #93d45a;
 }
-.balls:nth-child(5n+1) {
-    background-color: #FFC43C;
+.balls:nth-child(5n + 1) {
+  background-color: #ffc43c;
 }
-
 
 .app__divine-draw__history-header {
-    align-items: flex-start;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
+  align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 .app__divine-draw__history-header svg {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .app__divine-draw__history-header__left {
-    font-family: var(--subtitle);
+  font-family: var(--subtitle);
 }
 
-.app__divine-draw__history-round span, .app__divine-draw__history-header__left p {
-    font-size: .75rem;
-    font-weight: 400;
+.app__divine-draw__history-round span,
+.app__divine-draw__history-header__left p {
+  font-size: 0.75rem;
+  font-weight: 400;
 }
 
 .app__divine-draw__history-header__left input {
-    background-color: #e9eaeb;
-    border: none;
-    border-radius: 2rem;
-    color: #bdc2c4;
-    font-size: 1rem;
-    font-weight: 700;
-    outline: none;
-    margin-left: .5rem;
-    padding: .45rem 1rem;
-    width: 3.75rem;
-    text-align: center;
+  background-color: #e9eaeb;
+  border: none;
+  border-radius: 2rem;
+  color: #bdc2c4;
+  font-size: 1rem;
+  font-weight: 700;
+  outline: none;
+  margin-left: 0.5rem;
+  padding: 0.45rem 1rem;
+  width: 3.75rem;
+  text-align: center;
 }
 
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .app__divine-draw__history-round {
-    margin-bottom: .4rem;
+  margin-bottom: 0.4rem;
 }
 
 .app__divine-draw__history-header__right {
-    align-items: center;
-    display: flex;
-    gap: 1rem;
+  align-items: center;
+  display: flex;
+  gap: 1rem;
 }
 
 .app__divine-draw__history-empty {
-    width: 100%;
+  width: 100%;
 }
 
 .app__divine-draw__history-empty h2 {
-    font-size: 2.5rem;
-    font-weight: 600;
-    font-family: var(--subtitle);
-    margin-bottom: 1.5rem;
-    text-align: center;
+  font-size: 2.5rem;
+  font-weight: 600;
+  font-family: var(--subtitle);
+  margin-bottom: 1.5rem;
+  text-align: center;
 }
 
 .app__divine-draw__history-empty h3 {
-    font-size: 2rem;
-    font-weight: 600;
-    font-family: var(--subtitle);
-    margin: 0;
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: var(--subtitle);
+  margin: 0;
 }
 
 .app__divine-draw__history-empty p {
-    font-size: .875rem;
-    font-weight: 500;
-    font-family: var(--subtitle);
-    /* margin-top: 1rem; */
-    margin-bottom: 1rem;
-    text-align: center;
+  font-size: 0.875rem;
+  font-weight: 500;
+  font-family: var(--subtitle);
+  /* margin-top: 1rem; */
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .app__divine-draw__history-empty button {
-    border-radius: 133.333px;
-    border: none;
-    font-size: .875rem;
-    font-weight: 600;
-    font-family: var(--subtitle);
-    outline: none;
-    padding: .875rem 1.5rem;
-    transition: all .5s ease-in-out;
+  border-radius: 133.333px;
+  border: none;
+  font-size: 0.875rem;
+  font-weight: 600;
+  font-family: var(--subtitle);
+  outline: none;
+  padding: 0.875rem 1.5rem;
+  transition: all 0.5s ease-in-out;
 }
 
 .app__divine-draw__history-empty button:active {
-    transform: scale(1.12);
+  transform: scale(1.12);
 }
 
 .app__divine-draw__history-empty div {
-    background-color: #293040;
-    border-radius: 1rem;
-    margin: auto;
-    padding: 3rem 1rem;
-    text-align: center;
-    width: 768px;
+  background-color: #293040;
+  border-radius: 1rem;
+  margin: auto;
+  padding: 3rem 1rem;
+  text-align: center;
+  width: 768px;
 }
 
 /* HISTORY BODY */
 .app__divine-draw__history-body {
-    font-family: var(--subtitle);
+  font-family: var(--subtitle);
 }
 
 .app__divine-draw__history-body table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 .app__divine-draw__history-body thead {
-    background-color: #0C0813;
+  background-color: #0c0813;
 }
 
 .app__divine-draw__history-body th {
-    font-size: .825rem;
-    font-weight: 400;
-    padding: .5rem 0;
+  font-size: 0.825rem;
+  font-weight: 400;
+  padding: 0.5rem 0;
 }
-
 
 /* steps */
 .app__divine-draw__steps {
-    display: grid;
-    gap: 1.5rem;
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .app__divine-draw__steps-container h2 {
-    font-family: var(--title);
-    font-size: 3rem;
-    font-weight: 600;
-    margin-bottom: 3rem;
-    text-align: center;
+  font-family: var(--title);
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 3rem;
+  text-align: center;
 }
 
 .app__divine-draw__step {
-    background-color: #293040;
-    border-radius: .4rem;
-    box-shadow: 0px 1px 2px rgba(255, 255, 255, .6);
-    padding: 1.5rem;
+  background-color: #293040;
+  border-radius: 0.4rem;
+  box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
+  padding: 1.5rem;
 }
 
 .app__divine-draw__step h3 {
-    font-family: var(--title);
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+  font-family: var(--title);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .app__divine-draw__step p {
-    font-family: var(--subtitle);
-    font-size: .875rem;
-    font-weight: 400;
+  font-family: var(--subtitle);
+  font-size: 0.875rem;
+  font-weight: 400;
 }
 
 .app__divine-draw__step span {
-    display: block;
-    font-family: var(--subtitle);
-    font-size: .75rem;
-    font-weight: 500;
-    text-align: right;
+  display: block;
+  font-family: var(--subtitle);
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-align: right;
 }
 
 @keyframes bounce {
-    0% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(1);
+  }
 
-    100% {
-        transform: scale(1.08);
-    }
+  100% {
+    transform: scale(1.08);
+  }
 }
 
 @media screen and (max-width: 960px) {
-    .app__divine-draw__steps {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .app__divine-draw__steps {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    .app__divine-draw__history-empty {
-        padding: 0 1rem;
-    }
+  .app__divine-draw__history-empty {
+    padding: 0 1rem;
+  }
 
-    .app__divine-draw__history-empty div {
-        width: 100%
-    }
+  .app__divine-draw__history-empty div {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .app__divine-draw__steps {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 0 1rem;
-    }
+  .app__divine-draw__steps {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0 1rem;
+  }
 
-    .app__divine-draw__steps-container h2 {
-        font-size: 2.5rem;
-    }
+  .app__divine-draw__steps-container h2 {
+    font-size: 2.5rem;
+  }
 
-    .app__divine-draw__header {
-        min-height: fit-content;
-        padding: 4rem .5rem;
-    }
+  .app__divine-draw__header {
+    min-height: fit-content;
+    padding: 4rem 0.5rem;
+  }
 
-    .app__divine-draw__scroll {
-        left: 20px;
-        bottom: 20px;
-    }
+  .app__divine-draw__scroll {
+    left: 20px;
+    bottom: 20px;
+  }
 }
