--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,53 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Iceland&family=Poppins:wght@300;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Iceland&family=Poppins:wght@300;500;600&display=swap");
 :root {
-    --title: 'Iceland', sans-serif;
-    --subtitle: 'Poppins', sans-serif;
+  --title: "Iceland", sans-serif;
+  --subtitle: "Poppins", sans-serif;
+  --dark-yellow: #996a42;
+  --yellow: #d49c44;
+  --grey: rgb(128, 128, 128);
+  --light-grey: #c4c4c4;
+  --dark: #0c0813;
+  --white: #fff;
+  --black: #000;
 }
 
 * {
-    box-sizing: border-box;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
+  box-sizing: border-box;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
-html, #__next {
-    scroll-behavior: smooth;
-    font-size: 100%;
-    height: 100%;
+html,
+#__next {
+  scroll-behavior: smooth;
+  font-size: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: #0C0813;
-    color: #fff;
-    font-size: 100%;
-    height: 100%;
+  background-color: #0c0813;
+  color: var(--light-grey);
+  font-size: 100%;
+  height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
 .section__container {
-    margin: auto;
-    max-width: 1200px;
-    margin-bottom: 3rem;
+  margin: auto;
+  max-width: 1200px;
+  margin-bottom: 3rem;
 }
 
 @media screen and (max-width: 1023px) {
-    .section__container {
-        max-width: 90%;
-    }
+  .section__container {
+    max-width: 90%;
+  }
 }
 @media screen and (max-width: 824px) {
-    .section__container {
-        max-width: 95%;
-    }
+  .section__container {
+    max-width: 95%;
+  }
 }
 @media screen and (max-width: 560px) {
-    .section__container {
-        max-width: 100%;
-    }
+  .section__container {
+    max-width: 100%;
+  }
 }
