--- a/styles/rules.css
+++ b/styles/rules.css
@@ -1,64 +1,64 @@
 .app__rules {
-    margin-top: 1rem;
-    padding: 0 0 4rem;
+  margin-top: 1rem;
+  padding: 0 0 4rem;
 }
 
 .app__rules-field {
-    margin: auto;
-    margin-bottom: 1.5rem;
-    max-width: 956px;
+  margin: auto;
+  margin-bottom: 1.5rem;
+  max-width: 956px;
 }
 
 .app__rules-header {
-    align-items: center;
-    background-color: #293040;
-    display: flex;
-    justify-content: center;
-    height: 18rem;
-    margin-bottom: 2rem;
-    text-align: center;
+  align-items: center;
+  background-color: #293040;
+  display: flex;
+  justify-content: center;
+  height: 18rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 .app__rules-header h2 {
-    font-family: var(--title);
-    font-size: 3.5rem;
-    font-weight: 600;
-    margin-bottom: 2.5rem;
+  font-family: var(--title);
+  color: var(--yellow);
+  font-size: 3.5rem;
+  font-weight: 600;
+  margin-bottom: 2.5rem;
 }
 .app__rules-field p {
-    font-family: var(--subtitle);
-    font-size: .875rem;
-    line-height: 1.5rem;
-    font-weight: 300;
-    display: flex
+  font-family: var(--subtitle);
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  font-weight: 300;
+  display: flex;
 }
 
 .app__rules-field .dot {
-    min-width: 12px;
-    height: 12px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin-right: 12px;
-    margin-top: 10px;
+  min-width: 12px;
+  height: 12px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-right: 12px;
+  margin-top: 10px;
 }
 
-
 @media screen and (max-width: 824px) {
-    .app__rules-header h2 {
-        font-size: 2.5rem;
-    }
+  .app__rules-header h2 {
+    font-size: 2.5rem;
+  }
 
-    .app__rules-content {
-        padding: 1rem;
-    }
+  .app__rules-content {
+    padding: 1rem;
+  }
 }
 
 @media screen and (max-width: 560px) {
-    .app__rules-header h2 {
-        font-size: 2rem;
-        margin-bottom: 1.5rem;
-    }
-    .app__rules-container__field p {
-        font-size: .875rem;
-    }
+  .app__rules-header h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .app__rules-container__field p {
+    font-size: 0.875rem;
+  }
 }
