--- a/styles/divine-draw.css
+++ b/styles/divine-draw.css
@@ -147,18 +147,37 @@
   opacity: 1;
 }
 
-.app__divine-draw__history .history__table {
+.app__divine-draw__history .history__content {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.app__divine-draw__history .history__container {
   background-color: #293040;
+  border-radius: 20px;
+  box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
+  padding: 1rem;
   width: 100%;
 }
 
-.history__table table {
+.app__divine-draw__history .history__table {
   font-family: var(--subtitle);
-  width: 100%;
+  overflow-x: auto;
 }
 
-.history__table table th {
-  font-size: 14px;
+.app__divine-draw__history .history__table table {
+  border-collapse: collapse;
+  width: 100%;
+  min-width: 300px;
+}
+
+.app__divine-draw__history .history__table thead {
+  background-color: #0c0813;
+  white-space: nowrap;
+}
+
+.app__divine-draw__history .history__table th {
+  font-size: 0.825rem;
   font-weight: 400;
   padding: 0.5rem;
 }
@@ -175,11 +194,13 @@
 }
 
 .app__divine-draw__history-content {
-  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .app__divine-draw__history-container {
   background-color: #293040;
+  border-radius: 20px;
   box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.6);
   padding: 1rem;
   width: 100%;
@@ -351,21 +372,24 @@ input::-webkit-inner-spin-button {
 /* HISTORY BODY */
 .app__divine-draw__history-body {
   font-family: var(--subtitle);
+  overflow-x: auto;
 }
 
 .app__divine-draw__history-body table {
   border-collapse: collapse;
   width: 100%;
+  min-width: 300px;
 }
 
 .app__divine-draw__history-body thead {
   background-color: #0c0813;
+  white-space: nowrap;
 }
 
 .app__divine-draw__history-body th {
   font-size: 0.825rem;
   font-weight: 400;
-  padding: 0.5rem 0;
+  padding: 0.5rem;
 }
 
 /* steps */
@@ -434,6 +458,36 @@ input::-webkit-inner-spin-button {
 
   .app__divine-draw__history-empty div {
     width: 100%;
+  }
+
+  .app__divine-draw__history-content {
+    max-width: 100%;
+    padding: 0.5rem;
+  }
+
+  .app__divine-draw__history-body th {
+    font-size: 0.725rem;
+    padding: 0.3rem;
+  }
+
+  .app__divine-draw__history-body tbody {
+    font-size: 0.725rem;
+    padding: 0.3rem;
+  }
+
+  .app__divine-draw__history .history__content {
+    max-width: 100%;
+    padding: 0.5rem;
+  }
+
+  .app__divine-draw__history .history__table th {
+    font-size: 0.725rem;
+    padding: 0.3rem;
+  }
+
+  .app__divine-draw__history .history__table tbody {
+    font-size: 0.725rem;
+    padding: 0.3rem;
   }
 }
 
