--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,6 +64,11 @@ p {
   margin-bottom: 3rem;
 }
 
+.Toastify__toast-theme--light {
+  background-color: #293040 !important;
+  color: var(--light-grey) !important;
+}
+
 @media screen and (max-width: 1023px) {
   .section__container {
     max-width: 90%;
